@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    #26, add newThrottle to perform throttling
     #26, add unsafeExtraThread to run more than shakeThreads
     #32, add a check that withResources does not call need
     #614, support unicode filenames
